2011-08-18  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/pandora_modules.js: fixed get the parameters
	snmp3_auth_method and snmp3_privacy_method.

2011-08-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_modules.php: Format decimal numeric data
	in function modules_get_agentmodule when DB is Oracle.

2011-08-18  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/estado_generalagente.php: Changed the 
	IP address view in the agent info from a useless combo 
	to a text with the main addres and help_tip with the others

2011-08-17  Sancho lerena  <slerena@artica.es>

	* pandoradb.oracle.sql,
	pandoradb.postgreSQL.sql,
	extras/pandoradb_migrate_v3.2_to_v4.0.sql,
	pandoradb.sql: custom_oid now is text instead varchar(200).
	This allows alerts with huge regexp inside :-)

	* operation/snmpconsole/snmp_view.php: Custom info now is
	shown in only one label (Custom Data). Minor changes on layout.

	* godmode/snmpconsole/snmp_alert.php: Added help, resized controls
	and some other minor adjustments.

2011-08-17  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_html.php, include/functions_networkmap.php,
	include/functions_ui.php: fixed to use the name of file in tconfig_os
	instead the id for icon networkmap.

	* images/networkmap/*: renamed the image files to use the names of
	tconfig_os.

2011-08-17 Sancho Lerena  <slerena@artica.es>

	* operation/snmpconsole/snmp_view.php: SQL optimization and
	added space between icons.

	* snmp_wizard.png: New icon for new feature SNMP Wizard in 
	agent godmode (taken from enterprise massive SNMP module).

	* operation/snmpconsole/snmp_view.php: Fixed small ACL bug.

2011-08-17 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_networkmap.php: Fixed a bug with topology map


2011-08-17 Javier Lanz <javier.lanz@artica.es>

	* operation/snmpconsole/snmp_view.php: Fixed an style icon small bug

2011-08-17  Miguel de Dios  <miguel.dedios@artica.es>
