@@ -1,3 +1,9 @@
+2011-08-18  Sergio Martin <sergio.martin@artica.es>
+
+	* extensions/snmp_explorer.php
+	godmode/agentes/agent_manager.php: Add extension to the agents
+	management to get modules from SNMP with a wizard 
+
 2011-08-18  Miguel de Dios  <miguel.dedios@artica.es>
 
 	* include/javascript/pandora_modules.js: fixed get the parameters
